tests/cases/fail/class_constructor_arg_type.p4
class Point:
    x: int
    y: int

def main() -> None:
    p: Point = Point(True, 2)
    print(p.x)
